# red-blue-consistency

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  mylib.lua
.github/workflows/: main.yml
benchmark/: benchmarks.py  cli.py  clients.py  config.py  requirements.txt
benchmark/clients/: bank_client.py  set_client.py  wc_client.py
benchmark/utils/: gen_bank_data.py  gen_set_data.py  util.py
data/bank/: data_gen.py
data/wc/: small.txt
rb_client/: README.md  pyproject.toml
rb_client/redblue/: __init__.py  client.py  commands.py  connection.py  parser.py  serializer.py
server/: Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
server/cmd/redblue/: main.go
server/cmd/redblue-rust/: redblue.go
server/conf/: config.json
server/internal/core/: command.go  datastore.go  handlers.go  hset.go  object.go  redpos.go  sync_handlers.go
server/internal/routes/: hello.go
server/internal/server/: redops.go  server.go  socket.go
server/tests/: command_test.go
