[tool.poetry]
name = "redblue"
version = "0.1.0"
description = "Python Client for RedBlue Server"
authors = ["satyam <satyamjay030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
